--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ harmony:
   # Google Analytics key, leave blank to ignore
   google_analytics_key: UA-xxxx-x
 
+# Comments
+disqus-shortname: sikujekyll
+
   # Profile links, leave blank to ignore
   social: 
     github: jsiku
@@ -38,11 +41,13 @@ harmony:
     pinterest: 
   # Toggle disclaimer in footer
   show_disclaimer: true
+  
+  
 
 # Conversion / Build settings 
 markdown:    kramdown
 # This is how you put pygments config in jekyll 2.0 instead of pygments: true
-highlighter: pygments 
+highlighter: rouge
 
 # Permalinks
 permalink:        pretty
