--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl: /harmony
 
 # Site live URL
-url: http://siku.name
+# url: http://gayan.me
 
 # Localhost 
 # url: http://127.0.0.1:4000  
@@ -13,33 +13,28 @@ url: http://siku.name
 harmony:
   name: Siku.name
   # Little description about your site
-  description: miscellaneous papers
+  description: Jsiku's anything
   # 'meta_description:' Write an awesome description for your new site here.
   # It will appear in your document head meta (for Google search results) and 
   # in your feed.xml site description.
   meta_description: > # 
-   Harmony is a free responsive jekyll theme by Gayan Virajith
-   and Maheshika Lakmali. Sourced on Github - 
-   https://github.com/gayanvirajith/harmony
+   Jsiku is a first blog on hiw owns
   basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
   author: # Author details
-    name: jsiku. cho
-    email: j.siku.cho@gmail.com
-    url: http://jsiku.github.io 
+    name: Jsiku Cho
+    email: gmail.com
+    url: http://github.io/jsiku/
 
   # Google Analytics key, leave blank to ignore
   google_analytics_key: UA-xxxx-x
-  
-  # Comments
-disqus-shortname: sikujekyll
 
   # Profile links, leave blank to ignore
   social: 
-    github: gayanvirajith
-    twitter: gayanvirajith
-    facebook: gayanvirajith
-    gplus: +GayanVirajith
-    dribble: gayan
+    github: jsiku
+    twitter: 
+    facebook: 
+    gplus: 
+    dribble: 
     pinterest: 
   # Toggle disclaimer in footer
   show_disclaimer: true
