--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,7 @@ harmony:
     url: http://github.io/jsiku/
 
   # Google Analytics key, leave blank to ignore
-google_analytics_key: UA-xxxx-x
-disqus-shortname: sikujekyll
+google_analytics_key: UA-xxxx-
 
 
   # Profile links, leave blank to ignore
