--- a/_config.yml
+++ b/_config.yml
@@ -4,38 +4,39 @@
 baseurl: /harmony
 
 # Site live URL
-# url: http://gayan.me
+url: http://gayan.me
 
 # Localhost 
 # url: http://127.0.0.1:4000  
 
 # Harmony theme configuration. Please change accordingly.
 harmony:
-  name: Siku.name
+  name: Harmony
   # Little description about your site
-  description: Jsiku's anything
+  description: Harmony is free responsive jekyll theme.
   # 'meta_description:' Write an awesome description for your new site here.
   # It will appear in your document head meta (for Google search results) and 
   # in your feed.xml site description.
   meta_description: > # 
-   Jsiku is a first blog on hiw owns
+   Harmony is a free responsive jekyll theme by Gayan Virajith
+   and Maheshika Lakmali. Sourced on Github - 
+   https://github.com/gayanvirajith/harmony
   basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
   author: # Author details
-    name: Jsiku Cho
-    email: gmail.com
-    url: http://github.io/jsiku/
+    name: Gayan Virajith
+    email: gayanvirajith@gmail.com
+    url: http://gayanvirajith.github.io
 
   # Google Analytics key, leave blank to ignore
-google_analytics_key: UA-xxxx-
-
+  google_analytics_key: UA-xxxx-x
 
   # Profile links, leave blank to ignore
   social: 
-    github: jsiku
-    twitter: 
-    facebook: 
-    gplus: 
-    dribble: 
+    github: gayanvirajith
+    twitter: gayanvirajith
+    facebook: gayanvirajith
+    gplus: +GayanVirajith
+    dribble: gayan
     pinterest: 
   # Toggle disclaimer in footer
   show_disclaimer: true
