--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: /harmony
 harmony:
   name: sikuname
   # Little description about your site
-  description: 잡동구리들
+  description: 잡동구리들 Miscellaneous
   # 'meta_description:' Write an awesome description for your new site here.
   # It will appear in your document head meta (for Google search results) and 
   # in your feed.xml site description.
