--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Harmony Jekyll theme general configurations 
 
 # Base URL
-baseurl: /harmony
+baseurl: /jsiku.github.com
 
 # Site live URL
 # url: http://gayan.me
