--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ harmony:
     url: 
 
   # Google Analytics key, leave blank to ignore
-  google_analytics_key: UA-xxxx-x
+  google_analytics_key: UA-106335036-1
 
   # Profile links, leave blank to ignore
   social: 
