--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,11 @@ harmony:
   # Toggle disclaimer in footer
   show_disclaimer: true
 
+collections:
+  memos:
+    output: true
+    permalink: /memos/:path/
+
 # Conversion / Build settings 
 markdown:    kramdown
 # This is how you put pygments config in jekyll 2.0 instead of pygments: true
