--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ collections:
   memos:
     output: true
     permalink: /memos/:path/
+  links:
+    output: true
+    permalink: /links/:path/
 
 # Harmony theme configuration. Please change accordingly.
 harmony:
