--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl: /jsiku.github.com
 
 # Site live URL
-url: http://jsiku.github.io
+url: https://jsiku.github.io
 
 # Localhost 
 # url: http://127.0.0.1:4000  
