--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Harmony Jekyll theme general configurations 
 
 # Base URL
-baseurl: /jsiku.github.com
+baseurl: /jsiku.github.com/altjsiku
 
 # Site live URL
-url: https://jsiku.github.io
+url: https://jsiku.github.io/altjsiku
 
 # Localhost 
 # url: http://127.0.0.1:4000  
