--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Harmony Jekyll theme general configurations 
 
 # Base URL
-baseurl: /jsiku.github.com/altjsiku
+# baseurl: /jsiku.github.com/altjsiku
 
 # Site live URL
 url: https://jsiku.github.io/altjsiku
