--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl: /jsiku.github.com/altjsiku
 
 # Site live URL
-url: https://jsiku.github.io/altjsiku
+url: https://jsiku.github.io
 
 # Localhost 
 # url: http://127.0.0.1:4000  
